2011-04-23  John David Anglin  <dave.anglin@nrc-cnrc.ca>

	* gcc.dg/pr48616.c (dg-options): Add -fno-common to options on
	hppa*-*-hpux*.

2011-04-23  Jakub Jelinek  <jakub@redhat.com>

	PR c/48685
	* gcc.dg/pr48685.c: New test.

2011-04-22  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/48717
	* gcc.c-torture/execute/pr48717.c: New test.

2011-04-22  Uros Bizjak  <ubizjak@gmail.com>

	PR target/48723
	* gcc.target/i386/pr48723.c: New test.

2011-04-22  Jakub Jelinek  <jakub@redhat.com>

	PR c/48716
	* gcc.dg/gomp/pr48716.c: New test.
	* g++.dg/gomp/pr48716.C: New test.

2011-04-21  Uros Bizjak  <ubizjak@gmail.com>

	PR target/48708
	* gcc.target/i386/pr48708.c: New test.

2011-04-21  Richard Guenther  <rguenther@suse.de>

	PR middle-end/48695
	* g++.dg/torture/pr48695.C: New testcase.

2011-04-21  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/volatile5.adb: New test.
	* gnat.dg/volatile5_pkg.ads: New helper.

2011-04-20  Jason Merrill  <jason@redhat.com>

	* g++.dg/cpp0x/initlist47.C: New.

2011-04-20  Jason Merrill  <jason@redhat.com>

	* g++.dg/template/const4.C: New.

2011-04-19  Jason Merrill  <jason@redhat.com>

	* g++.dg/ext/complex7.C: New.

2011-04-19  Jakub Jelinek  <jakub@redhat.com>

	PR target/48678
	* gcc.target/i386/pr48678.c: New test.

2011-04-18  Jason Merrill  <jason@redhat.com>

	* g++.dg/cpp0x/union4.C: New.

2011-04-18  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/48661
	* g++.dg/torture/pr48661.C: New test.

	PR c++/48632
	* g++.dg/gomp/pr48632.C: New test.

2011-04-18  Richard Guenther  <rguenther@suse.de>

	PR middle-end/46364
	* g++.dg/torture/pr46364.C: New testcase.

2011-04-18  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/48616
	* gcc.dg/pr48616.c: New test.

2011-04-15  Jakub Jelinek  <jakub@redhat.com>

	PR target/48614
	* gcc.target/i386/pr46084.c: Require avx_runtime instead of
	just avx.

	PR target/48605
	* gcc.target/i386/sse4_1-insertps-3.c: New test.