@@ -1,3 +1,10 @@
+2011-04-24  Jakub Jelinek  <jakub@redhat.com>
+
+	PR preprocessor/48740
+	* lex.c (lex_raw_string): When raw string ends with
+	??) followed by raw prefix and ", ensure it is preprocessed
+	with ??) rather than ??].
+
 2011-03-25  Release Manager
 
 	* GCC 4.6.0 released.
