@@ -1,3 +1,8 @@
+2011-04-24  Jakub Jelinek  <jakub@redhat.com>
+
+	PR preprocessor/48740
+	* c-c++-common/raw-string-11.c: New test.
+
 2011-04-23  John David Anglin  <dave.anglin@nrc-cnrc.ca>
 
 	* gcc.dg/pr48616.c (dg-options): Add -fno-common to options on
